--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="/logo.png">
-  <title>图书管理系统 - 借书 | 还书 | 找书 | 订阅书 | 互动交流 </title>
+  <title>xxx 管理系统 </title>
 </head>
 
 <body>
